# knowledge-model

./: .env.example  .env.llm.example  .gitignore  BAO_CAO_BDTT.pptx  Bao_cao_qua_trinh_thuc_hien.docx  Dockerfile  README.md  README_local_web_app.md  create_pptx.py  create_pptx_v2.py  create_report.py  docker-compose.yml  extract_pptx.py  load_neo4j_seed.sh  presentation_v1.pptx  presentation_v2.pptx  project.md  pyproject.toml  requirements.txt
bugs/: build_neo4j_bug_ontology_dataset.py  neo4j_bug_ontology_nodes.csv  neo4j_bug_ontology_relationships.csv  neo4j_bug_ontology_seed.cypher  neo4j_bug_ontology_summary.json
concepts/: build_neo4j_latest_concepts_dataset.py  generate_neo4j_latest_concepts_dataset.py  neo4j_latest_concepts_nodes.csv  neo4j_latest_concepts_relationships.csv  neo4j_latest_concepts_seed.cypher  neo4j_latest_concepts_summary.json
diagnostic/: build_neo4j_diagnostic_rules_dataset.py  neo4j_diagnostic_rules_nodes.csv  neo4j_diagnostic_rules_relationships.csv  neo4j_diagnostic_rules_seed.cypher  neo4j_diagnostic_rules_summary.json
diagnostic_pipeline/: README.md  README_neo4j_driver_injection.md  __init__.py  clang_analyzers.py  claude_cli_client.py  dynamic_analysis.py  evidence_builder.py  example_usage.py  exercise_knowledge_base.py  feedback_generator.py  graph_repository.py  interfaces.py  llm_client.py  llm_semantic.py  local_env_llm_example.py  local_sandbox.py  mock_llm.py  models.py  neo4j_driver_integration_example.py  pipeline.py  prompt_builders.py  ranking.py  resource_limits.py  sandbox_runner.py  static_analysis.py  tooling.py
(+24 files in other folders)
