[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "diagnostic-pipeline"
version = "0.1.0"
description = "Hệ thống hỗ trợ giải bài tập lập trình có hướng dẫn từng bước"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "neo4j>=6.2.0",
]

[tool.setuptools.packages.find]
include = ["diagnostic_pipeline", "diagnostic_pipeline.*"]
